...
      { component: MaterialTopBarExample, name: 'MaterialTopBarExample' },
      { component: TabBarIconExample, name: 'TabBarIconExample' },
      { component: CustomTabBarExample, name: 'CustomTabBarExample' },
      { component: CoverflowExample, name: 'CoverflowExample' },
      {
        component: TabViewInsideScrollViewExample,
        name: 'TabView inside ScrollView Example',
      },
    ],
  },
  {
    title: 'Additional Examples',
    data: [
...
  return (
    <GestureHandlerRootView style={styles.root}>
      <SafeAreaProvider>
        <StatusBar barStyle="dark-content" />
        <NavigationContainer theme={navigationTheme}>
          <NavigationStack.Navigator
            initialRouteName="PagerView Example"
            screenOptions={{
              headerShadowVisible: false,
              headerTintColor: colors.foreground,
              headerTitleStyle: { fontWeight: '600' },
              headerBackButtonDisplayMode: 'minimal',
            }}
...
