appId: ${APP_ID}
#  tc136 Swipeable Carousel — Slider shows different album cover on each page 
---
- launchApp
- assertVisible: 'PagerView Example'
- swipe:
    start: '86%,80%'
    end: '90%,30%'
    duration: 352
- tapOn: 'CoverflowExample'
- assertVisible:
    text: 'Homogenic'
    index: 1
- swipe:
    start: '77%,66%'
    end: '20%,64%'
    duration: 240
- assertVisible: 'Number of the Beast'
- swipe:
    start: '74%,65%'
    end: '18%,64%'
    duration: 256
- assertVisible: "It's Blitz"
- swipe:
    start: '79%,50%'
    end: '18%,48%'
    duration: 384
- assertVisible: 'The Man-Machine'
- swipe:
    start: '79%,50%'
    end: '18%,48%'
    duration: 384
- assertVisible: 'The Score'
- swipe:
    start: '79%,50%'
    end: '18%,48%'
    duration: 384
- assertVisible: 'Lost Horizons'
- repeat:
    times: 7
    commands:
      - swipe:
          start: '31%,74%'
          end: '78%,74%'
          duration: 464
- assertVisible: 'Abbey Road'
- swipe:
    start: '79%,50%'
    end: '18%,48%'
    duration: 384
- assertVisible: 'Bat Out of Hell'
- clearState
