appId: ${APP_ID}
#  tc99 Nest PagerView Example tab is active and accessible
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'OnPageSelected Example'
- extendedWaitUntil:
    visible:
      text: 'You are on 1 page'
    timeout: 5000

- assertVisible:
    text: 'Hey'
