appId: ${APP_ID}
#  Nest PagerView Example tab is active and accessible
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Basic Example'
- assertVisible: '7 likes'
