appId: com.pagerviewexample
#  tc133 The Reanimated onPageScroll example tab is accessible
---
- launchApp
- assertVisible: "PagerView Example"
- swipe:
    start: "86%,80%"
    end: "90%,30%"
    duration: 352
- tapOn: "Reanimated onPageScroll example"
- assertVisible: First page