appId: com.pagerviewexample
#  tc96 There are 20 visible elements on the page 
---
- launchApp
- assertVisible: "PagerView Example"
- tapOn: "ScrollView inside PagerView Example"
- assertVisible:
    text: "CLICK ME"
    index: 0
- assertVisible:
    text: "CLICK ME"
    index: 1
- assertVisible:
    text: "CLICK ME"
    index: 2
- assertVisible:
    text: "CLICK ME"
    index: 3
- assertVisible:
    text: "CLICK ME"
    index: 4
- assertVisible:
    text: "CLICK ME"
    index: 5
- assertVisible:
    text: "CLICK ME"
    index: 6
- assertVisible:
    text: "CLICK ME"
    index: 7
- assertVisible:
    text: "CLICK ME"
    index: 8
- scroll    
- assertVisible:
    text: "CLICK ME"
    index: 0
- assertVisible:
    text: "CLICK ME"
    index: 1
- assertVisible:
    text: "CLICK ME"
    index: 2
- assertVisible:
    text: "CLICK ME"
    index: 3
- assertVisible:
    text: "CLICK ME"
    index: 4
- assertVisible:
    text: "CLICK ME"
    index: 5
- assertVisible:
    text: "CLICK ME"
    index: 6
- assertVisible:
    text: "CLICK ME"
    index: 7
- assertVisible:
    text: "CLICK ME"
    index: 8
- scroll
- assertVisible:
    text: "CLICK ME"
    index: 0
- assertVisible:
    text: "CLICK ME"
    index: 1
- assertVisible:
    text: "CLICK ME"
    index: 2